--- a/bank/style.css
+++ b/bank/style.css
@@ -6,7 +6,7 @@ body {
   color: white;
 }
 
-form{
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,46 +16,46 @@ h1 {
   font-size: 4em;
   text-align: center;
   font-variant: small-caps;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
-h2{
+h2 {
   text-align: center;
   font-weight: bold;
   font-variant: small-caps;
   font-size: 2.5em;
 }
 
-label{
+label {
   text-shadow: none;
   font-weight: bold;
   text-align: center;
   font-variant: small-caps;
-  padding: .5em;
+  padding: 0.5em;
 }
 
-a{
+a {
   text-decoration: none;
   color: white;
   text-shadow: none;
   font-size: 2em;
   margin: 0 10% 0 10%;
 }
-a:hover{
+a:hover {
   text-shadow: none;
 }
 
-.balance{
+.balance {
   text-align: center;
   margin: 5em 0 5em 0;
 }
 
-.table{
+.table {
   text-align: center;
   padding: 5em 6.66% 5em 6.66%;
 }
 
-.form{
+.form {
   color: #203321;
   background-color: white;
   padding: 1em;
@@ -64,6 +64,6 @@ a:hover{
   border-radius: 2em;
   text-shadow: none;
   border-style: solid;
-  border-color: #3B473B;
-  border-width: .5em;
+  border-color: #3b473b;
+  border-width: 0.5em;
 }
