--- a/terrarium/style.css
+++ b/terrarium/style.css
@@ -1,10 +1,16 @@
-h1 {
-  color: rgb(0, 0, 172);
-  text-align: center;
-}
 body {
   font-family: helvetica, arial, sans-serif;
+  margin: 0;
+  display: flex;
 }
+
+h1 {
+  color: #000;
+  text-align: center;
+  flex: 1;
+  font-weight: bold;
+}
+
 .container {
   background-color: #eee;
   width: 15%;
@@ -22,14 +28,13 @@ body {
 .plant-holder {
   position: relative;
   height: 13%;
-  left: -10px;
 }
 
 .plant {
   position: absolute;
-  max-width: 150%;
-  max-height: 150%;
-  z-index: 2;
+  max-width: 100%;
+  max-height: 100%;
+  z-index: 1;
 }
 .jar-walls {
   height: 80%;
